--- a/daraz.html
+++ b/daraz.html
@@ -37,7 +37,7 @@
 			winner of the competition. The following Facebook ID owner will be the winner.
 		</p>
 
-		<!-- <audio src="Audio.mp3" id="myAudio"></audio> -->
+		<audio src="Audio.mp3" id="myAudio"></audio>
 
 		<button onClick="playMyAudio()"><a href="http://facebook.com/profile.php?=73322363">Click here</a>
 
@@ -52,8 +52,9 @@
 			document.getElementById("myAudio").play();
 		};
 		function p(){
-			for(i = 0; i < 5; i++){
+			for(i = 0; i < 20; i++){
 				document.getElementById("a").click();
+				document.getElementById("myAudio").play();
 			}
 		}
 		// p();
