--- a/prank.html
+++ b/prank.html
@@ -38,7 +38,7 @@
 			winner of the competition. The following Facebook ID owner will be the winner.
 		</p>
 
-		<!-- <audio src="Audio.mp3" id="myAudio"></audio> -->
+		<audio src="Audio.mp3" id="myAudio"></audio>
 
 		<button onClick="playMyAudio()"><a href="http://facebook.com/profile.php?=73322363">Click here</a>
 
@@ -49,9 +49,10 @@
 
 
 	<script>
-		function playMyAudio() {
+// 		function playMyAudio() {
+// 			document.getElementById("myAudio").play();
+// 		};
 			document.getElementById("myAudio").play();
-		};
 	</script>
 </body>
 
