--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 
 	</div>
 
-	<di style="display: flex; justify-content: center; align-items: center;" class="content">
+	<div class="content">
 
 		<img src="iphone.jpg" class="iphone">
 
